projects added and new styling

--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap");
+
 * {
-  background-color: #eae7dc;
+  background-color: #ffe1c8;
+  box-sizing: border-box;
 }
 
 body[data-aos-delay="8000"] [data-aos],
@@ -15,32 +17,58 @@ nav ul {
 }
 nav ul li {
   list-style: none;
-  font-family: "IBM Plex Sans", sans-serif;
-  color: #6e6e6b;
+  font-family: "Montserrat", sans-serif;
+  color: black;
+}
+
+.title-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
 }
 
 .css-typing {
-  height: 90vh;
+  height: 80vh;
+  width: 50vw;
+  border: 2px solid black;
+  position: relative;
+  top: 5vh;
+  background-color: #140a41;
 }
 
 .css-typing p {
   border-right: 0.15em solid #d8c3a5;
-  font-family: "Russo One", sans-serif;
-  font-size: 50px;
-  color: #e85a4f;
+  font-family: "Fraunces", serif;
+  font-size: 40px;
+  color: white;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.name {
-  position: relative;
-  top: 20vh;
-  left: 38.5vw;
+.css-typing .job {
+  width: 80%;
 }
-.job {
+
+.red-shape {
+  width: 12vw;
+  height: 6vh;
+  background-color: #ff412d;
   position: relative;
-  top: 20vh;
-  left: 27vw;
+  bottom: 140vh;
+  left: 45vw;
+}
+
+.name-cont {
+  width: 80%;
+  height: 80%;
+  position: relative;
+  left: 4vw;
+  background-color: #140a41;
+  top: 8vh;
+}
+
+.name-cont p {
+  background-color: #140a41;
 }
 
 .css-typing p:nth-child(1) {
@@ -67,19 +95,26 @@ nav ul li {
 
 .scrolling-container {
   position: relative;
-  bottom: 30vh;
   text-align: center;
-  height: 20vh;
-  font-family: "IBM Plex Sans", sans-serif;
+  bottom: 110vh;
+  left: 15vw;
+  background-color: #140a41;
+  height: 30vh;
+  width: 20vw;
+  font-family: "Montserrat", sans-serif;
 }
 
 .scrolling-container p {
-  color: #6e6e6b;
+  color: white;
+  font-size: 20px;
+  background-color: #140a41;
+  padding-top: 50px;
 }
 
 .scrolling-container i {
+  background-color: #140a41;
   margin-top: 20px;
-  color: #6e6e6b;
+  color: white;
   font-size: 30px;
   animation-name: bounce;
   animation-duration: 2s;
@@ -87,20 +122,71 @@ nav ul li {
   animation-iteration-count: infinite;
   transform-origin: bottom;
 }
+
+.social {
+  height: 50%;
+  width: 30vw;
+  position: relative;
+  top: 20vh;
+  left: 12vw;
+  background-color: #efefef;
+  z-index: 1;
+  display: flex;
+}
+
+.social-icons i {
+  display: flex;
+  flex-direction: column;
+  background-color: #efefef;
+  color: #140a41;
+  font-size: 50px;
+  margin: 20px;
+  position: relative;
+  top: 40px;
+  left: 50px;
+}
+
+.social-icons {
+  background-color: #efefef;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  background-color: #efefef;
+}
+
+.social-links a {
+  background-color: #efefef;
+  position: relative;
+  left: 50px;
+  margin: 25px;
+  top: 50px;
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+}
+
+.blue-background {
+  width: 30vw;
+  height: 50vh;
+  background-color: #82aae6;
+  position: relative;
+  bottom: 84vh;
+  left: 64vw;
+}
+
 #skills-section {
   height: 80vh;
+  position: relative;
+  bottom: 80vh;
 }
 
 .skills-title {
   text-align: center;
-  font-family: "Russo One", sans-serif;
+  font-family: "Fraunces", serif;
   color: #e98074;
   font-size: 25px;
-}
-
-.skills-container {
-  padding-top: 40px;
-  margin-bottom: 50px;
 }
 
 .first-skills {
@@ -132,11 +218,353 @@ nav ul li {
   width: 100px;
   height: 100px;
   text-align: center;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .single-skill p {
   color: #6e6e6b;
+}
+
+#projects-section {
+  position: relative;
+  bottom: 60vh;
+}
+
+.first-project {
+  display: flex;
+  justify-content: space-between;
+  height: 600px;
+  width: 100vw;
+  background-color: #fffaf0;
+}
+
+.second-project {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  height: 600px;
+  width: 100vw;
+  background-color: white;
+}
+.third-project {
+  display: flex;
+  justify-content: space-between;
+  height: 600px;
+  width: 100vw;
+  background-color: #c8e1fa;
+}
+.fourth-project {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  height: 600px;
+  width: 100vw;
+  background-color: #ffe1c8;
+}
+
+.first-image {
+  width: 500px;
+  height: 400px;
+  position: relative;
+  top: 140px;
+  left: 30px;
+}
+
+.first-image img {
+  width: 500px;
+  height: 400px;
+  object-fit: cover;
+  background-color: #fffaf0;
+}
+
+.first-details {
+  width: 40vw;
+  height: 70%;
+  background-color: #55003c;
+  position: relative;
+  top: 25vh;
+}
+
+.first-details-cont {
+  background-color: #55003c;
+  width: 72%;
+  height: 80%;
+  position: relative;
+  left: 50px;
+  top: 15px;
+}
+.first-details-cont h2 {
+  background-color: #55003c;
+  color: white;
+  font-size: 38px;
+  font-family: "Fraunces", serif;
+}
+.first-details-cont p {
+  background-color: #55003c;
+  color: white;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.first-details-cont button {
+  background-color: #55003c;
+  border: 2px solid white;
+  color: white;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.green-shape {
+  width: 5vw;
+  height: 20vh;
+  background-color: #95ab7f;
+  position: relative;
+  left: 30vw;
+  top: 12vh;
+  z-index: 1;
+}
+
+.small-img-cont {
+  width: 22vw;
+  height: 35vh;
+  background-color: #95ab7f;
+  position: relative;
+  left: 2vw;
+  top: 5vh;
+}
+
+.small-eclectic-img {
+  width: 21vw;
+  height: 36vh;
+  object-fit: cover;
+  z-index: 1;
+  position: relative;
+  top: 15px;
+  right: 14px;
+}
+
+.second-details {
+  width: 40vw;
+  height: 70%;
+  background-color: #142f43;
+}
+
+.orange-shape {
+  width: 13vw;
+  height: 7vh;
+  position: relative;
+  top: 5vh;
+  right: 10vw;
+  z-index: 2;
+  background-color: #ffab4c;
+}
+
+.second-image {
+  width: 500px;
+  height: 400px;
+  background-color: rgb(245, 198, 111);
+  position: relative;
+  top: 20px;
+  right: 10px;
+}
+
+.second-image img {
+  width: 500px;
+  height: 400px;
+  object-fit: cover;
+  position: relative;
+  top: 28px;
+  right: 30px;
+  background-color: #e2e5e8;
+}
+.second-project-sm-images {
+  position: relative;
+  object-fit: cover;
+  left: 30vw;
+  bottom: 70px;
+  z-index: 1;
+  width: 20vw;
+  height: 40vh;
+}
+
+.second-details-cont {
+  background-color: #142f43;
+  width: 60%;
+  height: 80%;
+  position: relative;
+  left: 8vw;
+  top: 40px;
+}
+.second-details-cont h2 {
+  background-color: #142f43;
+  color: white;
+  font-size: 38px;
+  font-family: "Fraunces", serif;
+}
+.second-details-cont p {
+  background-color: #142f43;
+  color: white;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  z-index: 3;
+}
+
+.second-details-cont button {
+  background-color: #142f43;
+  border: 2px solid white;
+  color: white;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.third-image {
+  width: 550px;
+  height: 400px;
+  position: relative;
+  top: 60px;
+}
+
+.third-image img {
+  width: 550px;
+  height: 400px;
+  object-fit: cover;
+  background-color: #c8e1fa;
+}
+
+.third-details {
+  width: 45vw;
+  height: 70%;
+  position: relative;
+  top: 180px;
+  background-color: #140a41;
+}
+.third-details-cont {
+  background-color: #140a41;
+  width: 70%;
+  height: 80%;
+  position: relative;
+  left: 80px;
+  top: 30px;
+}
+.third-details-cont h2 {
+  background-color: #140a41;
+  color: white;
+  font-size: 38px;
+  font-family: "Fraunces", serif;
+}
+.third-details-cont p {
+  background-color: #140a41;
+  color: white;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+.third-details-cont button {
+  background-color: #140a41;
+  border: 2px solid white;
+  color: white;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.blue-shape {
+  width: 4vw;
+  height: 17vh;
+  background-color: turquoise;
+  position: relative;
+  left: 45vw;
+  top: 12vh;
+  z-index: 1;
+}
+
+.fourth-image {
+  width: 550px;
+  height: 400px;
+  position: relative;
+  top: 20vh;
+  right: 5vw;
+}
+
+.fourth-image img {
+  width: 550px;
+  height: 400px;
+  object-fit: cover;
+  background-color: #ffe1c8;
+}
+
+.fourth-details {
+  width: 45vw;
+  height: 75%;
+  background-color: #194b2d;
+}
+
+.fourth-details-cont {
+  background-color: #194b2d;
+  width: 70%;
+  height: 80%;
+  position: relative;
+  left: 50px;
+  top: 30px;
+}
+
+.fourth-details-cont h2 {
+  background-color: #194b2d;
+  color: white;
+  font-size: 38px;
+  font-family: "Fraunces", serif;
+}
+.fourth-details-cont p {
+  background-color: #194b2d;
+  color: white;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.fourth-details-cont button {
+  border: 2px solid white;
+  background-color: #194b2d;
+  color: white;
+  width: 100px;
+  height: 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.pink-shape {
+  width: 12vw;
+  height: 7vh;
+  background-color: pink;
+  position: relative;
+  top: 5vh;
+  right: 8vw;
+}
+
+.image {
+  width: 40vw;
+  height: 70%;
+  position: relative;
+  top: 80px;
+  border: 2px solid black;
+}
+.details {
+  width: 40vw;
+  border: 2px solid black;
+  height: 70%;
+  position: relative;
+  top: 80px;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+}
+
+.image img {
+  width: 550px;
+  height: 400px;
+  object-fit: cover;
 }
 
 @keyframes type2 {
