--- a/main.css
+++ b/main.css
@@ -1,14 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap");
 
 * {
   background-color: #ffe1c8;
   box-sizing: border-box;
+  scrollbar-width: none;
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 body[data-aos-delay="8000"] [data-aos],
 [data-aos][data-aos][data-aos-delay="8000"] {
   transition-delay: 8000ms;
+}
+
+nav {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 nav ul {
@@ -17,8 +29,13 @@ nav ul {
 }
 nav ul li {
   list-style: none;
+  text-decoration: none;
   font-family: "Montserrat", sans-serif;
   color: black;
+}
+
+a {
+  text-decoration: none;
 }
 
 .title-container {
@@ -39,14 +56,22 @@ nav ul li {
 .css-typing p {
   border-right: 0.15em solid #d8c3a5;
   font-family: "Fraunces", serif;
-  font-size: 40px;
   color: white;
   white-space: nowrap;
   overflow: hidden;
 }
 
+.css-typing .name {
+  font-weight: 600;
+  font-size: 50px;
+  margin-top: 10px;
+}
+
 .css-typing .job {
   width: 80%;
+  font-weight: 200;
+  font-size: 45px;
+  margin-top: 30px;
 }
 
 .red-shape {
@@ -72,7 +97,7 @@ nav ul li {
 }
 
 .css-typing p:nth-child(1) {
-  width: 6.8em;
+  width: 6.5em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 2s steps(40, end);
@@ -83,7 +108,7 @@ nav ul li {
 }
 
 .css-typing p:nth-child(2) {
-  width: 13.5em;
+  width: 11.5em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 3s steps(40, end);
@@ -102,6 +127,7 @@ nav ul li {
   height: 30vh;
   width: 20vw;
   font-family: "Montserrat", sans-serif;
+  font-weight: 100;
 }
 
 .scrolling-container p {
@@ -177,41 +203,103 @@ nav ul li {
 }
 
 #skills-section {
-  height: 80vh;
+  height: 100vh;
+  width: 100vw;
   position: relative;
-  bottom: 80vh;
+  bottom: 90vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #194b2d;
+  position: relative;
+  z-index: 1;
+}
+
+.skills-container {
+  background-color: #fffaf0;
+  height: 70%;
+  width: 56.5vw;
+  position: relative;
+  top: 100px;
+  left: 20px;
+  z-index: 3;
 }
 
 .skills-title {
   text-align: center;
   font-family: "Fraunces", serif;
-  color: #e98074;
+  color: white;
   font-size: 25px;
+  background-color: #194b2d;
+  width: 30%;
+  height: 50%;
+  position: relative;
+  top: 180px;
+  right: 20px;
+}
+
+.skills-title h1 {
+  background-color: #194b2d;
+  font-size: 45px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.skills-title p {
+  background-color: #194b2d;
+  margin-top: 50px;
+  text-align: left;
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  width: 75%;
 }
 
 .first-skills {
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  padding-top: 40px;
+  justify-content: space-evenly;
+  width: 56vw;
+  background-color: #fffaf0;
+  z-index: 3;
+  padding-bottom: 10px;
 }
 .second-skills {
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  justify-content: space-evenly;
+  width: 56vw;
+  background-color: #fffaf0;
+  padding-bottom: 10px;
+  z-index: 3;
 }
 .third-skills {
   display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
+  justify-content: space-evenly;
+  width: 56vw;
+  padding-bottom: 10px;
+  background-color: #fffaf0;
+  z-index: 3;
 }
 .fourth-skills {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  width: 56vw;
+  background-color: #fffaf0;
+  z-index: 3;
+}
+
+.pink-background {
+  width: 56.5vw;
+  height: 71vh;
+  background-color: pink;
+  z-index: 2;
+  position: relative;
+  bottom: 60vh;
+  left: 19vw;
 }
 
 #icon {
-  font-size: 60px;
+  font-size: 65px;
+  background-color: #fffaf0;
 }
 
 .single-skill {
@@ -219,15 +307,64 @@ nav ul li {
   height: 100px;
   text-align: center;
   font-family: "Montserrat", sans-serif;
+  background-color: #fffaf0;
+}
+
+.single-skill img {
+  background-color: #fffaf0;
 }
 
 .single-skill p {
-  color: #6e6e6b;
+  color: black;
+  background-color: #fffaf0;
+  margin-top: 5px;
 }
 
 #projects-section {
   position: relative;
-  bottom: 60vh;
+  bottom: 90vh;
+  padding-top: 20px;
+}
+
+.projects-title {
+  width: 40%;
+  height: 300px;
+  position: relative;
+  left: 30vw;
+  bottom: 10vh;
+  text-align: center;
+  background-color: #963c19;
+}
+
+.projects-title h1 {
+  background-color: #963c19;
+  color: white;
+  font-family: "Fraunces", serif;
+  font-size: 40px;
+  font-weight: 500;
+  position: relative;
+  top: 50px;
+}
+
+.projects-title p {
+  position: relative;
+  top: 100px;
+  width: 80%;
+  background-color: #963c19;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  left: 55px;
+  font-size: 15px;
+}
+
+.yellow-box {
+  width: 3vw;
+  height: 16vh;
+  background-color: #ffff23;
+  position: relative;
+  left: 35vw;
+  z-index: 1;
+  bottom: 35px;
 }
 
 .first-project {
@@ -296,6 +433,8 @@ nav ul li {
 .first-details-cont h2 {
   background-color: #55003c;
   color: white;
+  position: relative;
+  top: 20px;
   font-size: 38px;
   font-family: "Fraunces", serif;
 }
@@ -304,6 +443,8 @@ nav ul li {
   color: white;
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  top: 40px;
 }
 
 .first-details-cont button {
@@ -314,10 +455,12 @@ nav ul li {
   height: 30px;
   margin-top: 20px;
   margin-right: 20px;
+  position: relative;
+  top: 50px;
 }
 
 .green-shape {
-  width: 5vw;
+  width: 4vw;
   height: 20vh;
   background-color: #95ab7f;
   position: relative;
@@ -402,6 +545,8 @@ nav ul li {
   color: white;
   font-size: 38px;
   font-family: "Fraunces", serif;
+  position: relative;
+  top: 20px;
 }
 .second-details-cont p {
   background-color: #142f43;
@@ -409,6 +554,8 @@ nav ul li {
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
   z-index: 3;
+  position: relative;
+  top: 40px;
 }
 
 .second-details-cont button {
@@ -419,6 +566,8 @@ nav ul li {
   height: 30px;
   margin-top: 20px;
   margin-right: 20px;
+  position: relative;
+  top: 40px;
 }
 
 .third-image {
@@ -455,12 +604,16 @@ nav ul li {
   color: white;
   font-size: 38px;
   font-family: "Fraunces", serif;
+  position: relative;
+  top: 20px;
 }
 .third-details-cont p {
   background-color: #140a41;
   color: white;
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  top: 40px;
 }
 .third-details-cont button {
   background-color: #140a41;
@@ -470,10 +623,12 @@ nav ul li {
   height: 30px;
   margin-top: 20px;
   margin-right: 20px;
+  position: relative;
+  top: 60px;
 }
 
 .blue-shape {
-  width: 4vw;
+  width: 3vw;
   height: 17vh;
   background-color: turquoise;
   position: relative;
@@ -517,12 +672,16 @@ nav ul li {
   color: white;
   font-size: 38px;
   font-family: "Fraunces", serif;
+  position: relative;
+  top: 20px;
 }
 .fourth-details-cont p {
   background-color: #194b2d;
   color: white;
   font-size: 15px;
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  top: 40px;
 }
 
 .fourth-details-cont button {
@@ -533,38 +692,158 @@ nav ul li {
   height: 30px;
   margin-top: 20px;
   margin-right: 20px;
+  position: relative;
+  top: 60px;
 }
 
 .pink-shape {
   width: 12vw;
-  height: 7vh;
+  height: 6vh;
   background-color: pink;
   position: relative;
   top: 5vh;
   right: 8vw;
 }
 
-.image {
-  width: 40vw;
-  height: 70%;
+#experience-section {
   position: relative;
-  top: 80px;
-  border: 2px solid black;
-}
-.details {
-  width: 40vw;
-  border: 2px solid black;
-  height: 70%;
-  position: relative;
-  top: 80px;
-  text-align: center;
-  font-family: "Montserrat", sans-serif;
+  bottom: 90vh;
+  background-color: #c8e1fa;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-.image img {
-  width: 550px;
-  height: 400px;
-  object-fit: cover;
+.experience-title {
+  width: 30vw;
+  height: 30vh;
+  position: relative;
+  left: 35vw;
+  background-color: #140a41;
+}
+
+.experience-title h2 {
+  text-align: center;
+  position: relative;
+  top: 40px;
+  font-family: "Fraunces", serif;
+  color: white;
+  background-color: #140a41;
+}
+
+.experience-cont {
+  background-color: #c8e1fa;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.first-experience {
+  width: 30%;
+  height: 60vh;
+  background-color: white;
+}
+
+.second-experience {
+  width: 30%;
+  height: 60vh;
+  background-color: white;
+}
+
+.third-experience {
+  width: 30%;
+  height: 60vh;
+  background-color: white;
+}
+
+.first-experience h4 {
+  background-color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-family: "Fraunces", serif;
+  text-align: center;
+  color: #140a41;
+}
+.first-experience p {
+  background-color: white;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-bottom: 10px;
+}
+
+.first-experience ul li {
+  background-color: white;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-top: 10px;
+}
+
+.first-experience ul {
+  width: 80%;
+  position: relative;
+  left: 50px;
+  margin-top: 10px;
+}
+.second-experience h4 {
+  background-color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-family: "Fraunces", serif;
+  text-align: center;
+  color: #140a41;
+}
+.second-experience p {
+  background-color: white;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-bottom: 10px;
+}
+
+.second-experience ul li {
+  background-color: white;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-top: 10px;
+}
+
+.second-experience ul {
+  width: 80%;
+  position: relative;
+  left: 50px;
+  margin-top: 10px;
+}
+.third-experience h4 {
+  background-color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-family: "Fraunces", serif;
+  text-align: center;
+  color: #140a41;
+}
+.third-experience p {
+  background-color: white;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-bottom: 10px;
+}
+
+.third-experience ul li {
+  background-color: white;
+  font-family: "Montserrat", sans-serif;
+  color: #140a41;
+  padding-top: 10px;
+}
+
+.third-experience ul {
+  width: 80%;
+  position: relative;
+  left: 50px;
+  margin-top: 10px;
 }
 
 @keyframes type2 {
