main content added

--- a/main.css
+++ b/main.css
@@ -13,9 +13,13 @@
   display: none;
 }
 
-body[data-aos-delay="8000"] [data-aos],
-[data-aos][data-aos][data-aos-delay="8000"] {
-  transition-delay: 8000ms;
+body[data-aos-delay="5000"] [data-aos],
+[data-aos][data-aos][data-aos-delay="5000"] {
+  transition-delay: 5000ms;
+}
+
+#title-page {
+  height: 100vh;
 }
 
 nav {
@@ -32,6 +36,7 @@ nav ul li {
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
   color: black;
+  font-size: 16px;
 }
 
 a {
@@ -46,7 +51,7 @@ a {
 
 .css-typing {
   height: 80vh;
-  width: 50vw;
+  width: 60vw;
   border: 2px solid black;
   position: relative;
   top: 5vh;
@@ -64,23 +69,23 @@ a {
 .css-typing .name {
   font-weight: 600;
   font-size: 50px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .css-typing .job {
   width: 80%;
   font-weight: 200;
-  font-size: 45px;
-  margin-top: 30px;
+  font-size: 40px;
+  margin-top: 40px;
 }
 
 .red-shape {
-  width: 12vw;
-  height: 6vh;
+  width: 160px;
+  height: 50px;
   background-color: #ff412d;
   position: relative;
-  bottom: 140vh;
-  left: 45vw;
+  left: 41vw;
+  bottom: 57vh;
 }
 
 .name-cont {
@@ -112,8 +117,8 @@ a {
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 3s steps(40, end);
-  -webkit-animation-delay: 5s;
-  animation-delay: 5s;
+  -webkit-animation-delay: 3s;
+  animation-delay: 3s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 }
@@ -121,8 +126,8 @@ a {
 .scrolling-container {
   position: relative;
   text-align: center;
-  bottom: 110vh;
-  left: 15vw;
+  bottom: 50vh;
+  left: 13vw;
   background-color: #140a41;
   height: 30vh;
   width: 20vw;
@@ -144,20 +149,21 @@ a {
   font-size: 30px;
   animation-name: bounce;
   animation-duration: 2s;
-  animation-delay: 10s;
+  animation-delay: 8s;
   animation-iteration-count: infinite;
   transform-origin: bottom;
 }
 
 .social {
-  height: 50%;
-  width: 30vw;
+  height: 51%;
+  width: 36vw;
   position: relative;
-  top: 20vh;
-  left: 12vw;
+  top: 19vh;
+  left: 17.5vw;
   background-color: #efefef;
   z-index: 1;
   display: flex;
+  z-index: 3;
 }
 
 .social-icons i {
@@ -166,10 +172,14 @@ a {
   background-color: #efefef;
   color: #140a41;
   font-size: 50px;
-  margin: 20px;
+  margin: 24px;
   position: relative;
   top: 40px;
   left: 50px;
+}
+
+.social-icons a {
+  text-decoration: none;
 }
 
 .social-icons {
@@ -194,19 +204,19 @@ a {
 }
 
 .blue-background {
-  width: 30vw;
-  height: 50vh;
+  width: 35vw;
+  height: 52vh;
   background-color: #82aae6;
   position: relative;
-  bottom: 84vh;
-  left: 64vw;
+  right: 7vw;
+  top: 15vh;
+  z-index: 1;
 }
 
 #skills-section {
   height: 100vh;
   width: 100vw;
   position: relative;
-  bottom: 90vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -322,7 +332,6 @@ a {
 
 #projects-section {
   position: relative;
-  bottom: 90vh;
   padding-top: 20px;
 }
 
@@ -348,7 +357,7 @@ a {
 
 .projects-title p {
   position: relative;
-  top: 100px;
+  top: 90px;
   width: 80%;
   background-color: #963c19;
   color: white;
@@ -358,13 +367,13 @@ a {
 }
 
 .yellow-box {
-  width: 3vw;
-  height: 16vh;
+  width: 50px;
+  height: 140px;
   background-color: #ffff23;
   position: relative;
   left: 35vw;
   z-index: 1;
-  bottom: 35px;
+  bottom: 10px;
 }
 
 .first-project {
@@ -415,7 +424,7 @@ a {
 }
 
 .first-details {
-  width: 40vw;
+  width: 600px;
   height: 70%;
   background-color: #55003c;
   position: relative;
@@ -441,7 +450,7 @@ a {
 .first-details-cont p {
   background-color: #55003c;
   color: white;
-  font-size: 15px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
   position: relative;
   top: 40px;
@@ -451,17 +460,30 @@ a {
   background-color: #55003c;
   border: 2px solid white;
   color: white;
-  width: 100px;
-  height: 30px;
+  width: 120px;
+  height: 40px;
   margin-top: 20px;
   margin-right: 20px;
   position: relative;
   top: 50px;
+  font-size: 15px;
+}
+
+.first-details-cont button:hover {
+  border: 4px solid white;
+}
+
+.first-details-cont button i {
+  background-color: #55003c;
+  margin-right: 10px;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 
 .green-shape {
-  width: 4vw;
-  height: 20vh;
+  width: 50px;
+  height: 140px;
   background-color: #95ab7f;
   position: relative;
   left: 30vw;
@@ -489,17 +511,17 @@ a {
 }
 
 .second-details {
-  width: 40vw;
+  width: 500px;
   height: 70%;
   background-color: #142f43;
 }
 
 .orange-shape {
-  width: 13vw;
-  height: 7vh;
+  width: 140px;
+  height: 40px;
   position: relative;
   top: 5vh;
-  right: 10vw;
+  right: 15vw;
   z-index: 2;
   background-color: #ffab4c;
 }
@@ -525,7 +547,7 @@ a {
 .second-project-sm-images {
   position: relative;
   object-fit: cover;
-  left: 30vw;
+  left: 37vw;
   bottom: 70px;
   z-index: 1;
   width: 20vw;
@@ -537,8 +559,8 @@ a {
   width: 60%;
   height: 80%;
   position: relative;
-  left: 8vw;
-  top: 40px;
+  left: 6vw;
+  top: 20px;
 }
 .second-details-cont h2 {
   background-color: #142f43;
@@ -551,7 +573,7 @@ a {
 .second-details-cont p {
   background-color: #142f43;
   color: white;
-  font-size: 15px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
   z-index: 3;
   position: relative;
@@ -562,12 +584,24 @@ a {
   background-color: #142f43;
   border: 2px solid white;
   color: white;
-  width: 100px;
-  height: 30px;
+  width: 120px;
+  height: 40px;
   margin-top: 20px;
   margin-right: 20px;
   position: relative;
   top: 40px;
+  font-size: 15px;
+}
+.second-details-cont button:hover {
+  border: 4px solid white;
+}
+
+.second-details-cont button i {
+  background-color: #142f43;
+  margin-right: 10px;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 
 .third-image {
@@ -585,7 +619,7 @@ a {
 }
 
 .third-details {
-  width: 45vw;
+  width: 650px;
   height: 70%;
   position: relative;
   top: 180px;
@@ -610,7 +644,7 @@ a {
 .third-details-cont p {
   background-color: #140a41;
   color: white;
-  font-size: 15px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
   position: relative;
   top: 40px;
@@ -619,17 +653,30 @@ a {
   background-color: #140a41;
   border: 2px solid white;
   color: white;
-  width: 100px;
-  height: 30px;
+  width: 120px;
+  height: 40px;
   margin-top: 20px;
   margin-right: 20px;
   position: relative;
   top: 60px;
+  font-size: 15px;
+}
+
+.third-details-cont button:hover {
+  border: 4px solid white;
+}
+
+.third-details-cont button i {
+  background-color: #140a41;
+  margin-right: 10px;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 
 .blue-shape {
-  width: 3vw;
-  height: 17vh;
+  width: 50px;
+  height: 140px;
   background-color: turquoise;
   position: relative;
   left: 45vw;
@@ -678,7 +725,7 @@ a {
 .fourth-details-cont p {
   background-color: #194b2d;
   color: white;
-  font-size: 15px;
+  font-size: 14px;
   font-family: "Montserrat", sans-serif;
   position: relative;
   top: 40px;
@@ -688,17 +735,30 @@ a {
   border: 2px solid white;
   background-color: #194b2d;
   color: white;
-  width: 100px;
-  height: 30px;
+  width: 120px;
+  height: 40px;
   margin-top: 20px;
   margin-right: 20px;
   position: relative;
   top: 60px;
+  font-size: 15px;
+}
+
+.fourth-details-cont button:hover {
+  border: 4px solid white;
+}
+
+.fourth-details-cont button i {
+  background-color: #194b2d;
+  margin-right: 10px;
+  font-size: 20px;
+  position: relative;
+  top: 2px;
 }
 
 .pink-shape {
-  width: 12vw;
-  height: 6vh;
+  width: 150px;
+  height: 50px;
   background-color: pink;
   position: relative;
   top: 5vh;
@@ -706,28 +766,27 @@ a {
 }
 
 #experience-section {
-  position: relative;
-  bottom: 90vh;
   background-color: #c8e1fa;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
 .experience-title {
-  width: 30vw;
+  width: 400px;
   height: 30vh;
   position: relative;
-  left: 35vw;
+  left: 36vw;
   background-color: #140a41;
 }
 
 .experience-title h2 {
   text-align: center;
   position: relative;
-  top: 40px;
+  top: 80px;
   font-family: "Fraunces", serif;
   color: white;
   background-color: #140a41;
+  font-size: 30px;
 }
 
 .experience-cont {
@@ -738,28 +797,28 @@ a {
 }
 
 .first-experience {
-  width: 30%;
+  width: 400px;
   height: 60vh;
   background-color: white;
 }
 
 .second-experience {
-  width: 30%;
+  width: 400px;
   height: 60vh;
   background-color: white;
 }
 
 .third-experience {
-  width: 30%;
+  width: 400px;
   height: 60vh;
   background-color: white;
 }
 
 .first-experience h4 {
   background-color: white;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 23px;
   font-family: "Fraunces", serif;
   text-align: center;
   color: #140a41;
@@ -787,9 +846,9 @@ a {
 }
 .second-experience h4 {
   background-color: white;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 23px;
   font-family: "Fraunces", serif;
   text-align: center;
   color: #140a41;
@@ -817,9 +876,9 @@ a {
 }
 .third-experience h4 {
   background-color: white;
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 23px;
   font-family: "Fraunces", serif;
   text-align: center;
   color: #140a41;
@@ -830,6 +889,7 @@ a {
   font-family: "Montserrat", sans-serif;
   color: #140a41;
   padding-bottom: 10px;
+  font-size: 15px;
 }
 
 .third-experience ul li {
@@ -837,6 +897,7 @@ a {
   font-family: "Montserrat", sans-serif;
   color: #140a41;
   padding-top: 10px;
+  font-size: 15px;
 }
 
 .third-experience ul {
@@ -844,6 +905,179 @@ a {
   position: relative;
   left: 50px;
   margin-top: 10px;
+}
+
+.education-container {
+  margin-top: 70px;
+  width: 700px;
+  position: relative;
+  left: 26vw;
+  height: 40vh;
+  background-color: #142f43;
+  padding: 10px;
+}
+
+.education-title {
+  text-align: center;
+  font-family: "Fraunces", serif;
+  padding-top: 10px;
+  color: white;
+  background-color: #142f43;
+  z-index: 1;
+}
+
+.red-shape-two {
+  background-color: #ff412d;
+  width: 40px;
+  height: 100px;
+  z-index: 2;
+  position: relative;
+  left: 22vw;
+  bottom: 12vh;
+}
+
+.education-title h3 {
+  background-color: #142f43;
+  font-size: 28px;
+  z-index: 1;
+}
+
+.yellow-shape-two {
+  background-color: #ffab4c;
+  width: 40px;
+  height: 110px;
+  z-index: 2;
+  position: relative;
+  bottom: 40vh;
+  left: 4vw;
+}
+.education-names {
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+  top: 20px;
+  background-color: #142f43;
+  z-index: 1;
+  font-size: 14px;
+}
+
+.education-names strong {
+  background-color: #142f43;
+  z-index: 1;
+}
+
+.education-names p {
+  padding: 10px;
+  color: white;
+  background-color: #142f43;
+  z-index: 1;
+  position: relative;
+  left: 30px;
+  width: 90%;
+}
+
+#about-section {
+  height: 100vh;
+  background-color: #963c19;
+  position: relative;
+  bottom: 20px;
+}
+
+.about-cont {
+  background-color: #963c19;
+  text-align: center;
+}
+
+.about-cont h2 {
+  font-family: "Fraunces", serif;
+  color: white;
+  font-size: 40px;
+  background-color: #963c19;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.about-cont img {
+  object-fit: cover;
+  position: relative;
+}
+
+.about-cont p {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  padding: 20px;
+  color: white;
+  background-color: #963c19;
+  font-size: 15px;
+  width: 60%;
+  position: relative;
+  left: 280px;
+  top: 50px;
+}
+
+.contact-div {
+  width: 600px;
+  height: 400px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  position: relative;
+  left: 30vw;
+  background-color: #140a41;
+}
+
+.contact-div h2 {
+  text-align: center;
+  font-family: "Fraunces", serif;
+  background-color: #140a41;
+  color: white;
+  padding-bottom: 30px;
+  padding-top: 50px;
+  font-size: 40px;
+}
+
+.red-shape-three {
+  width: 45px;
+  height: 120px;
+  background-color: #ff412d;
+  position: relative;
+  bottom: 27vh;
+  right: 350px;
+}
+
+.contact-container {
+  background-color: #140a41;
+  display: flex;
+  justify-content: center;
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  background-color: #140a41;
+}
+
+.icons i {
+  font-size: 50px;
+  color: white;
+  background-color: #140a41;
+  padding: 11px;
+  text-align: center;
+}
+
+.icon-names {
+  background-color: #140a41;
+}
+
+.icon-names p {
+  background-color: #140a41;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  padding: 20px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.icon-names a p:hover {
+  text-decoration: underline;
 }
 
 @keyframes type2 {
