--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body[data-aos-delay="5000"] [data-aos],
 
 #title-page {
   height: 100vh;
+  width: 100vw;
 }
 
 nav {
@@ -81,7 +82,7 @@ a {
 
 .red-shape {
   width: 160px;
-  height: 50px;
+  height: 45px;
   background-color: #ff412d;
   position: relative;
   left: 41vw;
@@ -367,7 +368,7 @@ a {
 }
 
 .yellow-box {
-  width: 50px;
+  width: 45px;
   height: 140px;
   background-color: #ffff23;
   position: relative;
@@ -675,7 +676,7 @@ a {
 }
 
 .blue-shape {
-  width: 50px;
+  width: 45px;
   height: 140px;
   background-color: turquoise;
   position: relative;
@@ -758,7 +759,7 @@ a {
 
 .pink-shape {
   width: 150px;
-  height: 50px;
+  height: 45px;
   background-color: pink;
   position: relative;
   top: 5vh;
